--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -30,3 +30,10 @@ pages = {321--330},
 keywords = {I.3.5 [Computer Graphics], Computational Geometry and Object Modeling},
 year = {2008},
 }
+
+@book{farin2001curves,
+  title={Curves and surfaces for CAGD: a practical guide},
+  author={Farin, G.},
+  year={2001},
+  publisher={Morgan Kaufmann}
+}
