--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -79,7 +79,7 @@ This is the problem I am attempting to solve in this project. On the computer it
 
 The basic concept is to make a replacement for pen and paper 2D sketches. In other words not a solution for situations where a high degree of accuracy is needed and/or attainable, but rather when the goal is to illustrate ideas and communicate them. In \secref{sec:eval} I therefore put the most emphasis on the expressive power the final solution gives the user, and less on accuracy and speed. Resulting illustrations that were produced by users of the implementation can be seen in \secref{sec:results}, along with a performance benchmark on different hardware.
 
-It is in publications from the geologic field I have found the most inspiration for this project. Artists in such media often use what I choose to call the ``box-model'' to illustrate concepts. Examples of such illustrations can be seen in section \secref{sec:geology}, for example in figure (INSERT REF TO FIGURE). The illustration is drawn inside a box cutout of the area of interest. This gives a good way to illustrate the spatial relation of elements in the model, like layers of different rock and deposits, rivers, ridges, mountains and the landscape they create together. I give an introduction to the relevant geologic background and terminology in \secref{sec:geology}.
+It is in publications from the geologic field I have found the most inspiration for this project. Artists in such media often use what I choose to call the ``box-model'' to illustrate concepts. Examples of such illustrations can be seen in \secref{sec:geology}, for example in figure (INSERT REF TO FIGURE). In that section we will also get an introduction to the relevant geologic background and terminology. The illustration is drawn inside a box cutout of the area of interest. This gives a good way to illustrate the spatial relation of elements in the model, like layers of different rock and deposits, rivers, ridges, mountains and the landscape they create together. 
 
 Illustrations using this ``box-model'' gave rise to the approach I have choosen. The user is initially presented with an empty box, and then procedes by outlining on and in this box the particular features he wants to model. An explanation of the use of this technique and all others I have developed can be found in \secref{sec:concept}, while the algorithmic solutions are discussed in \secref{method}. To put that in context I have included a brief report on the state of the art in the fields of Computer modeling and Geological modeling as they relate to this project, in \secref{sec:star}
 
@@ -183,38 +183,36 @@ Hand drawn illustrations and an explaining text were made of how the finished so
  \label{fig:riverDesription}
 \end{figure}
 
-\subsubsection{Implementation work}
-
-In this part the progression of work will be explained without going into much detail about the specific solutions created unless relevant for understading the choices that werw made. For the specific solutions, look at the \secref{subsec:indepth}.
-
-Implementation work was started by creating the cube and a camera system that would allow rotating around and zooming in and out of the cube. This was achieved relatively quickly. Intersection tests and input on the cube was the next step. At first this was achieved by simply looping through all the triangles and storing each intersection point in a list, and then drawing lines between the points that were found. However, the next step was the real challenge, which had not really been considered in depth until now. That challenge was how in the world to create a layer that makes sense from lines drawn on the faces of the cube. 
-
-While imagining the solution, creating the layer wasn't really considered to be a challenge deserving all that much consideration. However, a considerable amount of time was spent on figuring this out. The very first thing done was to simply loop through all the points and draw triangle strips beginning with the first and last point, then second and second to last, and so on. This created some structure that could resemble a layer, but it was clear that it would not be usable for anything, and it was not very robust at all. The second approach was to do a simple interpolation of the points on the cube faces for each point, by going from left to right, back to front of the cube along the curves drawn on the cubes faces. Before this could be achieved, it was then clear that the four sides of the cubes needed to have separate structures and detection of which face was being drawn on. This was achived by creating a separate structure out of each side, and making a base class that would become the basis for the tree structure that eventually became an important part of the final solution. Thus, each face now kept track of it's own point as they were being drawn on.
-
-The interpolation of a layer from these points did work to create a surface structure, and it was a robust solution. The problem was that it did not interpolate each point that had been drawn on the cube, and thus it was difficult to predict what you needed to draw in order to get the desired result (INSERT ILLUSTRATION). A solution where the user coud expect the layer surface to pass through the actual points he would draw was desired to achieve the goals of being a tool for rapid sketching that did not require advanced training. Another solution would therefore need to be found.
-
-A lot of time was spent in order to find a satisfactory solution to this problem. Books on curves and surfaces were read for a while, but in the end the solution came from the geologic field itself. A technique that geologists use to model surfaces in sand was stubled accross. This old technique involves using two wooden profiles, and then slide a third profile across to create a surface. The technique is depicted in figure \ref{fig:wooden} and how it was adapted for the final solution is described later in \secref{subsec:indepth}. Another technique was also developed at the same time, inspired by Inverse Distance Weighing interpolation. This yielded similar results, but was a bit more unpredictable and required more user input, and was thus not included in the final solution.
-
-WRITE ABOUT REST OF SOLUTION DEVELOPMENT
+After having created a version of the program that could be used as a prototype for demonstration, some outside collaborators from the department of geology were contacted. The rest of research and development was guided heavily by the collaboration with them.
 
 \subsubsection{Collaboration}
-Once the basic idea of the solution had been implemented it was shown to a professor of geology. He showed great interrest and said he believed this could be good approach for illustrations in geology (se appendices for minutes of the meeting) and he had a few suggestions for improvements. He also gave the contact detail of one of his students, Marie Songve, who would help in further assesment and feature improvements
+Once the basic idea of the solution had been implemented it was shown to a professor of geology. He showed great interrest and said he believed this could be good approach for illustrations in geology (se appendices for notes from the meeting) and he had a few suggestions for improvements. The main takeaway from this meating was that the focus on the ability of creating nice looking sketches in a quick fashion was the most important. There wera also some other ideas and features suggested for further development. He also gave the contact detail of one of his students, Marie Songve, who would help in further assesment and feature improvements.
 
-CONTINUE DESCRIPTION OF COLLABORATION
+The collaboration thus continued with Marie. She helped develp some custom sketches on paper that would be the focus of development( see reconstruction in figure ILLUSTRATE ). She also helped assess and guide the development through the rest of the implementation phase. After implementation Marie also helped in assessing the success of the project by giving her impressions and trying out the program by creating several sketches on her own. The results of this can be found in \secref{sec:results}. The collaboration with geologists was very helpful in guiding development direction and in taking choices during the implementation.
+
+\subsubsection{Implementation work}
+
+In this part the progression of work will be explained without going into much detail about the specific solutions created unless relevant for understading the choices that are discussed and are not explained elsewhere. For the specific solutions, look at the \secref{subsec:indepth}.
+
+Implementation work was started by creating the cube and a camera system that would allow rotating around and zooming in and out of the cube. This was achieved relatively quickly. Intersection tests and input on the cube was the next step. At first this was achieved by simply looping through all the triangles and storing each intersection point in a list, and then drawing lines between the points that were found. However, the next step was the real challenge, which had not really been considered in depth until now. That challenge was how in the world to create a layer that makes sense from lines drawn on the faces of the cube. Different approaches were tried, and the details of how that turned out can be found in \secref{subsec:layers} furter back. This ended up taking a lot more time that was initially expected. However, in order to focus on the solution, one has to know the problem, so all the extra work that might seem wasted was actually needed in order to realize what solution to look for.
+
+Once a solution to the layer problem was found, there was of course a lot of other features needed to create a program that could be used for making useful sketches. Meetings with Marie helped focus the direction and prioritazation of their implementation. All the different features that were planned in order to reproduce the sketch that was initially drawn were implemented one after the other. There were not any specific unforseen problems with the implementation of each of them, allthough all the different features like ridges and rivers had to be developed so that they would work together as smoothly as possible. In addition there were the non-geologic features of the program to think about, like undo functionality, save and load possibilities etc. These also had to work togheter with the other features in a way that would not upset any of the other features. As new features were added, it sometimes felt as if the complexity was growing exponentially. The program code was therefore changed many times to 
+try and abstract the complexity to make the implementation of new features as easy as possible.
+
+It was while realizing the complexity of the initial approach that the idea of a parametric and ordered hierachical structure was invented. The parametric coordinates would restrict the placement of a feature to two dimensions on it's parents surface. This would ease the recalculation of coordinates once something changed. The ordered structure meant that each feature would only have to deal with immediate parent and children, and the order in which they had been drawn would be the guiding way to solve conflicts that might arise. The thought behind this was that the user would be thinking of the structures in a hierachical way already, and after familiarizing himself with the program would know what order things needed to be drawn in to create the desired effect.
+
+
+
+WRITE ABOUT REST OF SOLUTION DEVELOPMENT
 
 % allthough some new ideas were developed as work progressed, and others discarded along the way, mainly for lack of time.
 
 
 \subsection{General design solutions}
 \label{subsec:generaldesign}
-First I will explain the general concepts that all of or most of the features have in common. After follows a more in depth explanation of each specific feature.
+In this section we will explore the general concepts that all of or most of the features have in common. After follows a more in depth explanation of each specific feature.
 
- There are three abstract steps from user to the visual image. The visual feeback of the produced image to the user will then enable him to refine his input, should it be needed, such that the image better represents what he originally had in mind.
-
-After input has been gathered and the users intent understood, the algorithms creates a structure that hopefully captures what was intended.
-
-The third step is then to create a visual representation of this structure. This is often the most computationally heavy process.
-
+There are three abstract steps from user to the visual image. The visual feeback of the produced image to the user will then enable him to refine his input, should it be needed, such that the image better represents what he originally had in mind. After input has been gathered and the users intent understood, the algorithms creates a structure that hopefully captures what was intended. The third step is then to create a visual representation of this structure. This is often the most computationally heavy process.
 
 The abstract concept from the users perspective is that there is a certain structure he wants to model. In his head he has an abstract notion of each of the parts that are needed and a notion of the image he wants to produce. The user knows how to input parameters that the program will interpret in a certain way to create the structures he needs. This is the first step of the internal algorithms. To interpret the users input.
 
@@ -274,20 +272,54 @@ The choice of technology to base the work on was made by a bit of trial and erro
 
 Qt was chosen as the user interface library because of previous experience. In addition to having a good set of user interface classes it also has a lot of helpfull classes with things like collections and event handling that make the process of programming in c++ pleasant.
 
-Some tests were initially conducted in java by porting the code from c++ as it was made. Allthough the java runtime itself is theoretically fast enough, naívely using it's methods of abstraction slows down data access a lot. This forces you to write complicated and unreadable code that defeats one of the main purposes of using jave in the first place. The abstractions in c++ can be a bit more complicated to use than in standard Java, but also allow much faster data access and better control over memory allocation. The main problem here was that Java would constantly allocate objects on the heap even though they would only be needed temporarily. The Java compiler does have optimizations that removes such allocations where possible, but a lot of times it cannot know what the life expectancy of an object is. This was possible to overcome by writing specially designed code to make it possible for the compiler to see where a temporary object is not being reused and by passing primitive types in stead of pointers to objects in many places. Another problem is that arrays are restricted to contain primitive types or pointers. Thus an array of objects cannot be allocated such that it's objects lie in contigous memory, and this slows down access a lot. This was also possible to overcome by making arrays of primitive types in stead of objects. Bith these approaches put together made the code run comparably fast to the c++ code, but also almost as hard to understand and modify as assembly language, and therefore I decided against continuing this approach. It would probably have been possible to solve all such problems with Java by relying on doing all heavy calculations on the GPU by using opengl shading language or a similar GPU programming language. This was decided against for lack experience with GPU programming and a lack of time for learning and experimenting with development tools designed for such programming. None of the algoritms explained utilize this possibility, allthough that would probably increase the running speed noticeably.
+Some tests were initially conducted in java by porting the code from c++ as it was made. Allthough the java runtime itself is theoretically fast enough, naívely using it's methods of abstraction slows down data access a lot. This forces you to write complicated and unreadable code that defeats one of the main purposes of using jave in the first place. The abstractions in c++ can be a bit more complicated to use than in standard Java, but also allow much faster data access and better control over memory allocation. The main problem here was that Java would constantly allocate objects on the heap even though they would only be needed temporarily. The Java compiler does have optimizations that removes such allocations where possible, but a lot of times it cannot know what the life expectancy of an object is. This was possible to overcome by writing specially designed code to make it possible for the compiler to see where a temporary object is not being reused and by passing primitive types in stead of pointers 
+to objects in many places. Another problem is that arrays are restricted to contain primitive types or pointers. Thus an array of objects cannot be allocated such that it's objects lie in contigous memory, and this slows down access a lot. This was also possible to overcome by making arrays of primitive types in stead of objects. Bith these approaches put together made the code run comparably fast to the c++ code, but also almost as hard to understand and modify as assembly language, and therefore I decided against continuing this approach. It would probably have been possible to solve all such problems with Java by relying on doing all heavy calculations on the GPU by using opengl shading language or a similar GPU programming language. This was decided against for lack experience with GPU programming and a lack of time for learning and experimenting with development tools designed for such programming. None of the algoritms explained utilize this possibility, allthough that would probably increase the 
+running speed noticeably.
 
 \subsubsection{Cube}
-There is no input to change the parameters of the cube. The cube itself is represented by the size of its three dimensions. That is, height, width, and depth. It the outset it was the intention to be able to change the size of the cube in these three dimensions, but I have not had the time to get to this feature. The gemoetry of the cube is constructed by creating and positioning six square faces of correct size and the correct orientation. Each of the faces are also in turn contructed by two triangles and outlined by a line strip. When visualizing the cube geometry, only the triangle of the back faces are rendered, but all lines are shown. This effect is achieved by backface culling, makes the cube look transparent, and avoids occlusion of the geometry inside.
+There is no input to change the parameters of the cube. The cube itself is represented by the size of its three dimensions. That is, height, width, and depth. It the outset it was the intention to be able to change the size of the cube in these three dimensions, but there was not enough time to get to this feature. The gemoetry of the cube is constructed by creating and positioning six square faces of correct size and the correct orientation. Each of the faces are also in turn contructed by two triangles and outlined by a line strip. When visualizing the cube geometry, only the triangle of the back faces are rendered, but all lines are shown. This effect is achieved by backface culling, makes the cube look transparent, and avoids occlusion of the geometry inside.
 
 \subsubsection{Layers}
-Input for layers are drawn on the cube faces. On faces where you draw, there is an auto-complete function and on the left, right and oppsite side, a suggestion function. The pretty simple auto-complete, will automatically complete a line you draw by extending it towards the left and right side of the current face. 
+\label{subsec:layers}
+At the onset of development, while the final solution was still only an idea, creating the layer wasn't really considered to be a challenge deserving all that much consideration. However, a considerable amount of time was spent on figuring this out. The very first thing done was to simply loop through all the points and draw triangle strips beginning with the first and last point, then second and second to last, and so on. This created some structure that could resemble a layer, but it was clear that it would not be usable for anything, and it was not very robust at all. The second approach was to do a simple interpolation of the points on the cube faces for each point, by going from left to right, back to front of the cube along the curves drawn on the cubes faces. Before this could be achieved, it was then clear that the four sides of the cubes needed to have separate structures and detection of which face was being drawn on. This was achived by creating a separate structure out of each side, and making a 
+base class that would become the basis for the tree structure that eventually became an important part of the final solution. Thus, each face now kept track of it's own point as they were being drawn on.
 
-The suggestion does different things according to the state of the other faces. If drawing on the first face of the cube, it will automatically mirror that input to the other side of the cube from where he is drawing, and then extends lines between these on the faces to the left and to the right of the face he is drawing. When further changes to this initial suggestion are made, what will happen depends on which sided have been draw on already. If the opposite face has already been drawn on by the user, it will not be changed. If the left and right side has been draw on, they will be modified so that the first point aligns with the last point of the left hand face, and the last point aligns with the right hand face. This is done by imagining a line from the first and last actual points of the curve, and then replicating the distance in height of each point on a new imagined line in the desired position. === see FIGURE of modification ===. Otherwize there will simply be drawn a straight line fitting the same 
+The interpolation of a layer from these points did work to create a surface structure, and it was a robust solution. The problem was that it did not interpolate each point that had been drawn on the cube, and thus it was difficult to predict what you needed to draw in order to get the desired result (INSERT ILLUSTRATION). A solution where the user coud expect the layer surface to pass through the actual points he would draw was desired to achieve the goals of being a tool for rapid sketching that did not require advanced training. Another solution would therefore need to be found.
+
+A lot of time was spent in order to find a satisfactory solution to this problem. Books on curves and surfaces were read for a while, but in the end the solution came from the geologic field itself. A technique that geologists use to model surfaces in sand was stubled accross. This old technique involves using two wooden profiles, and then slide a third profile across to create a surface. The technique is depicted in figure \ref{fig:wooden} and how it was adapted for the final solution is described later in \secref{subsec:indepth}. Another technique was also developed at the same time, inspired by Inverse Distance Weighing interpolation. This yielded similar results, but was a bit more unpredictable and required more user input, and was thus not included in the final solution.
+
+Input for layers are drawn on the cube faces. On faces where the user draws, there is an auto-complete function while on the left, right and oppsite side there is a suggestion function. The simple auto-complete will automatically complete a line you draw by extending it towards the left and right side of the current face. 
+
+\begin{figure}
+\includegraphics[width=.5\linewidth]{thesis/suggestion1.png}
+\includegraphics[width=.5\linewidth]{thesis/suggestion2.png}
+ \caption{When the user draws the first curve on a face of the cube, it is replicated on the opposite side, and then lines extended on both left and right hand sides.}
+ \label{fig:suggest}
+\end{figure}
+
+
+The suggestion does different things according to the state of the other faces. If there has been no user input on the opposite side of the cube, it will automatically mirror that input to that opposite side of the cube from where he is drawing, and then extends lines between the first and last point of the curve on the current face to the first and last point of the curve on the opposite face. (see figure \ref{fig:suggest}) These straight lines will then of course end up on the faces to the left and to the right of the face the user is currently is drawing. When further changes to this initial suggestion are made, what will happen depends on which sided have been draw on directly by the user already. ( see figure \ref{fig:layerModify} ) If the opposite face has already been drawn on by the user, it will not be changed. If the left and right side has been draw on, they will be modified so that the first point aligns with the last point of the left hand face, and the last point aligns with the right hand face.
+ This is done by imagining a line from the first and last actual points of the curve, and then replicating the distance in height of each point on a new imagined line in the desired position ( from the new point at the beginning or end of the recently modified curve to the opposite side ). Otherwize there will simply be drawn a straight line fitting the same 
 constraints. This assures that the lines on all the faces are always connected at the edges of the cube such that they are always ready to create a layer from.
 
-A Layer is represented using 8 curves. First, the four curves from user input on the cube is used to create a surface representing the top of the layer. Then, for each of the sides, the users input on this side and a precomputed line that represents the bottom of the layer (that is, where it meets the surfaces below) are used to create a surface for the side of the layer. === FIGURE illustrating the representation of a layer ===
+\begin{figure}
+\includegraphics[width=.5\linewidth]{thesis/modification1.png}
+\includegraphics[width=.5\linewidth]{thesis/modification2.png}
+ \caption{When the user modifies a preexisting face of the cube different things can happen. On left hand side we see that the curve that was drawn earlier is modified to line up with the new endpoint. On the right hand side, which was a generated line, we simply generate a new line like earlier. On the opposite side nothing changes.}
+ \label{fig:layerModify}
+\end{figure}
 
-Below I present an algorithm for creating a height field from these four curves. The inspiration for this algorithm comes from an old technique used in geologic modeling in sand. I read about this technique in the book Curves and Surfaces for CAGD, by Farin. The idea is that you can model a suface in sand by carving two profiles on the left and right side of a wooden box. Then, by dragging a third free hand wooden profile along the two sides you modify the sand surface accordingly (see figure ~\ref{fig:wooden}). The algorithm I present here can be thought of as very similar, only it will allow you to create two versions of the free hand profile, between which the actual profile will be interpolated at each point as you drag it accross the sides.
+A Layer is represented using 8 curves. First, the four curves from user input on the cube is used to create a surface representing the top of the layer. Then, for each of the sides, the users input on this side and a precomputed line that represents the bottom of the layer (that is, where it meets the surfaces below) are used to create a surface for the side of the layer. This bottom curve is thus actually imlicitly given by the previous layers that already exist, and thus it is actually all previous layers that are part of the layers representation and the bottom curve is not really needed to be able to recompute the layers geometry. It is kept temporarily though, in order to avoid unneccessary recomputing it. === FIGURE illustrating the representation of a layer ===
+
+\begin{figure}
+\includegraphics[width=.5\linewidth]{thesis/layerRepresentation1.png}
+\includegraphics[width=.5\linewidth]{thesis/layerRepresentation2.png}
+ \caption{The layer is represented by the four curves the user draws, plus the lower line that represents the top of all previously drawn lines. The layer geometry is generated between these two lines.}
+ \label{fig:layerRep}
+\end{figure}
+
+
+Below I present an algorithm for creating a height field from these four curves. The inspiration for this algorithm comes from an old technique used in geologic modeling in sand. I read about this technique in the book Curves and Surfaces for CAGD, by Farin \cite{farin2001curves}. In this book it is simply used as an example of pre-computer surfaces, so it was somewhat of a concidence that I found this technique here. The idea is that you can model a suface in sand by carving two profiles on the left and right side of a wooden box. Then, by dragging a third free hand wooden profile along the two sides you modify the sand surface accordingly (see figure ~\ref{fig:wooden}). The algorithm I present here can be thought of as very similar, only it will allow you to create two versions of the free hand profile, between which the actual profile will be interpolated at each point as you drag it accross the sides.
 
 \begin{figure}
  \includegraphics[width=\linewidth]{thesis/sandbox.pdf}
